fix for word wrap bug

--- a/src/components/RestaurantMenu/RestItem.css
+++ b/src/components/RestaurantMenu/RestItem.css
@@ -1,91 +1,93 @@
 .r-image {
-    height: 200px;
-    width: 280px;
-  }
-  .label {
-    display: flex;
-    gap: 2rem;
-    align-items: center;
-  }
-  
-  
-  .rest-item,.accordian-header {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    padding: 0.5rem 0.75rem;
-    cursor: pointer;
-    width: 100%;
-  }
+  height: 200px;
+  width: 280px;
+}
+.label {
+  display: flex;
+  gap: 2rem;
+  align-items: center;
+}
 
-  .item-info {
-    display: flex;
-    flex-direction: column;
-    align-items: flex-start;
-    gap: 0.5rem;
-    padding-right: 60px;
-  }
-  
-  .rest-dish-bar{
-    margin:1rem 0;
-  }
-  .item-description{
-    font-size: 13px;
-  }
-  .item-img {
-    width: 150px;
-    height: 100px;
-    border-radius: 10px;
-  }
-  .add-dish {
-    border: 1px solid rgb(223, 59, 59);
-    padding : 0.25rem 0.75rem;
-    margin-top: 0.5rem;
-    font-weight: bolder;
-    display: flex;
-    align-items: center;
-    border-radius: 8px;
-  }
-  .inc-dec {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    width: 100%;
-  }
-  .symbol {
-    height: 14px;
-    width: 14px;
-    cursor: pointer;
-  }
-  .recommend {
-    margin-bottom: 1.5rem;
-    margin-top: 1.5rem;
-    width: 100%;
-  }
-  input::placeholder {
-    text-align: center;
-  }
-  .menu-search {
-    margin: auto;
-    height: 35px;
-    width: 270px;
-    border-radius: 8px;
-    text-align: center;
-  }
-  
-  .fetchError {
-    text-align: center;
-    margin: auto;
-    color: red;
-    margin-top: 12vh;
-  }
-  .sorry {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-  }
-  .sorry-img {
-    height: 500px;
-  }
-  
+.rest-item,
+.accordian-header {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0.5rem 0.75rem;
+  cursor: pointer;
+  width: 100%;
+}
+
+.item-info {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 0.5rem;
+  padding-right: 60px;
+}
+
+.rest-dish-bar {
+  margin: 1rem 0;
+}
+.item-description {
+  font-size: 13px;
+  word-break: break-word; /* Break long words */
+  white-space: normal; /* Handle non-breaking spaces */
+  overflow-wrap: break-word; /* Ensure content wraps properly */
+}
+.item-img {
+  width: 150px;
+  height: 100px;
+  border-radius: 10px;
+}
+.add-dish {
+  border: 1px solid rgb(223, 59, 59);
+  padding: 0.25rem 0.75rem;
+  margin-top: 0.5rem;
+  font-weight: bolder;
+  display: flex;
+  align-items: center;
+  border-radius: 8px;
+}
+.inc-dec {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+}
+.symbol {
+  height: 14px;
+  width: 14px;
+  cursor: pointer;
+}
+.recommend {
+  margin-bottom: 1.5rem;
+  margin-top: 1.5rem;
+  width: 100%;
+}
+input::placeholder {
+  text-align: center;
+}
+.menu-search {
+  margin: auto;
+  height: 35px;
+  width: 270px;
+  border-radius: 8px;
+  text-align: center;
+}
+
+.fetchError {
+  text-align: center;
+  margin: auto;
+  color: red;
+  margin-top: 12vh;
+}
+.sorry {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.sorry-img {
+  height: 500px;
+}
